tests/cases/compiler-development/artifact/errors/diagnostic-generic-function-unknown-type-arg.diagnostic
diagnostic error code=T0001 family=type message="unsupported executable type 'Missing'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-function-unknown-type-arg.ari" display="tests/cases/generics/errors/generic-function-unknown-type-arg.ari" bytes=95
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-function-unknown-type-arg.ari" line=6 column=19 end_line=6 end_column=26 byte_start=80 byte_end=87 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-function-unknown-type-arg.ari:6:19\n   |\n 6 |   return identity<Missing>(1);\n   |                   ^^^^^^^"
